--- a/indexProyecto02.html
+++ b/indexProyecto02.html
@@ -96,21 +96,21 @@
         </div>
     </section>
 
-    <section>
+    <section class="sinDatos">
         <div id="msjInicial" class="msjCamposVacios">
             <div class="imgCamposVacios">
                 <img class="imgVacios" src="Info.png" alt="">
             </div>
             <div class="tablaVacia">
-                <p>No se han capturado datos</p>
+                <p class="pSinDatos">No se han capturado datos</p>
             </div>
         </div>
     </section>
 
-    <section class="edicion">
+    <section id="secEdicion" class="edicionOculta">
         <div>
             <h4>Datos</h4>
-            <p>Se muestran todos los registros</p>
+            <p class="textoRegistrosVisibles">Se muestran todos los registros</p>
         </div>
     </section>
         
@@ -150,3 +150,4 @@
 <!-- https://lineadecodigo.com/css/espaciar-contenido-en-una-tabla-con-css/ -->
 <!-- https://developer.mozilla.org/es/docs/Learn/Forms/Form_validation -->
 <!-- https://developer.mozilla.org/es/docs/Web/API/Document_Object_Model/Traversing_an_HTML_table_with_JavaScript_and_DOM_Interfaces -->
+<!-- https://aukera.es/blog/tabla-html-responsive/ -->
